# monsoon_plus_plus

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
collectors/self/: CMakeLists.txt
collectors/self/src/: self.cc
doc/: CMakeLists.txt  Doxyfile.in
engine/: CMakeLists.txt
engine/include/monsoon/: build_task.h  configuration-inl.h  configuration.h  context.h  expr_result-inl.h  expr_result.h  expression.h  match_clause-inl.h  match_clause.h  mutable_context.h  rule.h
engine/include/monsoon/expression/: expression.h
engine/include/monsoon/match_clauses/: by_clause-inl.h  by_clause.h  default_match_clause-inl.h  default_match_clause.h  without_clause-inl.h  without_clause.h
engine/src/: build_task.cc  context.cc  expression.cc  match_clause.cc  mutable_context.cc  rule.cc
engine/src/expressions/constants/: constant.cc
engine/src/expressions/operators/: binop.cc  cmp_ge.cc  cmp_gt.cc  cmp_le.cc  cmp_lt.cc  divide.cc  equality.cc  inequality.cc  logical_and.cc  logical_not.cc  logical_or.cc  minus.cc  modulo.cc  multiply.cc  negate.cc  numeric_binop.cc  plus.cc  unop.cc
engine/src/match_clauses/: by_clause.cc  default_match_clause.cc  without_clause.cc
examples/: CMakeLists.txt  count.cc  eval.cc  print_all_metric_names.cc  print_all_metrics.cc
expr/: CMakeLists.txt
expr/include/monsoon/: expr_export_.h  expression-inl.h  expression.h  match_clause.h  path_matcher.h  tag_matcher.h
expr/include/monsoon/expressions/: constant.h  doc_.h  match_clause.h  merger-inl.h  merger.h  operators.h  selector-inl.h  selector.h
expr/include/monsoon/grammar/: expression.h
expr/src/: expression.cc  match_clause.cc  overload.h  path_matcher.cc
expr/src/expressions/: constant.cc  match_clause.cc  merger.cc  operators.cc  selector.cc
expr/src/grammar/expression/: ast.cc  rules.cc
expr/tests/: CMakeLists.txt  constant.cc  expr_parser.cc  expression.cc  merger.cc  parser.cc  test_hacks.ii
history/: CMakeLists.txt
history/dirhistory/: CMakeLists.txt
history/dirhistory/src/: dirhistory.cc  dynamics.cc  dynamics.h  emit_visitor-inl.h  emit_visitor.cc  emit_visitor.h  hdir_exception.cc  overload.h  raw_file_segment_reader.cc  raw_file_segment_reader.h  raw_file_segment_writer.cc  raw_file_segment_writer.h  tsdata.cc  tsdata_mime-inl.h  tsdata_mime.cc  tsdata_mime.h
history/dirhistory/src/io/: replacement_map.cc  tx_sequencer.cc  txfile.cc  wal.cc  wal.h
history/dirhistory/src/v0/: tsdata-inl.h  tsdata.cc  tsdata.h
history/dirhistory/src/v1/: tsdata-inl.h  tsdata.cc  tsdata.h
history/dirhistory/src/v2/: bitset.cc  bitset.h  cache.cc  cache.h  dictionary.cc  dictionary.h  encdec-inl.h  encdec.cc  encdec.h  encdec_ctx.cc  encdec_ctx.h  file_data_tables.cc  file_data_tables.h  file_data_tables_block.cc  file_data_tables_block.h  file_segment_ptr.h  fwd.h  group_table.cc  group_table.h  metric_table.cc  metric_table.h  record_array.cc  record_array.h  record_metrics.cc  record_metrics.h  tables.cc  tables.h  timestamp_delta.cc  timestamp_delta.h  tsdata.cc  tsdata.h  tsdata_list-inl.h  tsdata_list.cc  tsdata_list.h  tsdata_tables.cc  tsdata_tables.h  tsdata_xdr.cc  tsdata_xdr.h  tsfile_header.cc  tsfile_header.h  (+2 more)
history/dirhistory/tests/: CMakeLists.txt  GeneratedCode.java  count.cc  print.h  replacement_map.cc  tsdata.cc  tsdata_cpp.cc  tsdata_cpp.h  tsdata_print.h  tsdata_v0.tsd  tsdata_v1.tsd  tsdata_v2_list.tsd  tsdata_v2_tables.tsd  txfile.cc  wal_record.cc  wal_region.cc
history/include/monsoon/history/: collect_history.h  history_export_.h  instrumentation.h  print_history.h
history/src/: collect_history.cc  instrumentation.cc  print_history.cc
intf/: CMakeLists.txt
intf/include/monsoon/: acceptor-inl.h  acceptor.h  alert-inl.h  alert.h  collector.h  config_support.h  doc_.h  group_name-inl.h  group_name.h  histogram-inl.h  histogram.h  instrumentation.h  interpolate.h  intf_export_.h  metric_name-inl.h  metric_name.h  metric_source.h  metric_value-inl.h  metric_value.h  path_common-inl.h  path_common.h  path_matcher-inl.h  path_matcher.h  push_processor.h  simple_group-inl.h  simple_group.h  tag_matcher-inl.h  tag_matcher.h  tags-inl.h  tags.h  time_point-inl.h  time_point.h  time_range-inl.h  time_range.h  time_series-inl.h  time_series.h  time_series_value-inl.h  time_series_value.h
intf/src/: alert.cc  collector.cc  config_support.cc  group_name.cc  histogram.cc  instrumentation.cc  interpolate.cc  metric_name.cc  metric_source.cc  metric_value.cc  path_common.cc  path_matcher.cc  push_processor.cc  simple_group.cc  tag_matcher.cc  tags.cc  time_point.cc  time_range.cc  time_series.cc  time_series_value.cc
intf/src/grammar/intf/: ast.cc  rules.cc
intf/tests/: CMakeLists.txt  config_support.cc  hacks.h  intf_parse.cc  metric_name.cc  metric_value.cc  path_matcher.cc  simple_group.cc  tags.cc  value.cc
lib/: CMakeLists.txt
lib/include/monsoon/: any-inl.h  any.h  cheap_fn_ref.h  hash_support.h  invoke.h  lib_export_.h  memoid.h  optional-inl.h  optional.h  overload.h  shared_resource_allocator.h  unique_alloc_ptr.h
lib/misc/: CMakeLists.txt
lib/misc/include/monsoon/: fd.h  gzip_stream.h  misc_export_.h  positional_stream-inl.h  positional_stream.h  stream.h
lib/misc/src/: aio.cc  fd.cc  gzip_stream.cc  positional_stream.cc  ptr_stream.cc  stream.cc  xdr.cc
lib/misc/tests/: CMakeLists.txt  cache.cc  create_non_existing.cc  file_creation.cc  gzip_compress.cc  gzip_decompress.cc  xdr_encdec.cc
lib/objpipe/: CMakeLists.txt
lib/objpipe/src/: base_objpipe.cc  errc.cc  pipe.cc  reader_intf.cc
lib/objpipe/tests/: CMakeLists.txt  objpipe.cc  test_hacks.h  test_hacks.ii
lib/pipe/: CMakeLists.txt
lib/queue/: CMakeLists.txt
lib/queue/src/: queue.cc
lib/src/: any.cc  empty_file.cc  optional.cc
lib/tests/: CMakeLists.txt  overload.cc
lib/tx/: CMakeLists.txt  LockOrder.md
lib/tx/src/tx/: db.cc  db_errc.cc  instrumentation.cc  sequence.cc  tree.cc  tree_error.cc  tx_aware_data.cc  txfile.cc
lib/tx/tests/: CMakeLists.txt  commit_manager_impl.cc  replacement_map.cc  sequence.cc  txfile.cc  wal_record.cc  wal_region.cc
(+165 files in other folders)
